<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secundaria"
    tools:context=".Home">
    <RelativeLayout
        android:id="@+id/conteiner_carregando"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaria"
        android:elevation="10dp"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="180sp"
        android:background="@drawable/borda_topo"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="22dp"
            android:text="@string/nome_usuario"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/estoque"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/conteiner_resumo"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/bordas_redondas"
        android:elevation="5dp"
        android:layout_marginTop="80dp"
        android:outlineSpotShadowColor="@color/primaria3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout2"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/text_desempenho_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Divergencia Total: -10%"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:textColor="@color/secundaria2"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <com.github.aachartmodel.aainfographics.aachartcreator.AAChartView
            android:id="@+id/grafico_pizza_divergencia_setor"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_desempenho_total"
            app:layout_constraintVertical_bias="0.304">

        </com.github.aachartmodel.aainfographics.aachartcreator.AAChartView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/conteiner_divergencias"
        android:layout_width="match_parent"
        android:layout_height="183dp"
        android:layout_marginTop="20dp"
        android:outlineSpotShadowColor="@color/primaria3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conteiner_resumo">

        <TextView
            android:id="@+id/text_divergencias_pendentes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/divergencias_pendentes"
            android:textColor="@color/secundaria2"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_divergencias_pendentes"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/text_divergencias_pendentes"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:listitem="@layout/item_recycle_divergencia" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/conteiner_agenda_contagem"
        android:layout_width="wrap_content"
        android:layout_height="183dp"
        android:layout_marginTop="5dp"
        android:outlineSpotShadowColor="@color/primaria3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conteiner_divergencias">

        <TextView
            android:id="@+id/text_agenda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agenda_contagem"
            android:textColor="@color/secundaria2"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_agenda_conategem"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_agenda"
            tools:ignore="MissingConstraints"
            tools:listitem="@layout/item_recycle_agenda_contagem" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>